--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "24.5.1",
     "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
-    "autoprefixer": "10.4.21",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.35.0",
     "eslint-config-next": "15.5.3",
     "next": "15.5.3",
